# ChessCpp

./: CMakeLists.txt  README.md
ChessInCpp/: Board.cpp  Board.h  CMakeLists.txt  ChessInCpp.cpp  ChessInCpp.h  Display.cpp  Display.h  Field.cpp  Field.h  Piece.cpp  Piece.h  coordPair.h  pieceDefs.txt  pieceParser.cpp  pieceParser.h
